Clean up store, fix NPE on no Google services, add IndicatorBlock, fix bugs

--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -1,94 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/bundle_item"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/fixed_grid_tall_height"
-              android:orientation="vertical"
-              android:layout_marginLeft="@dimen/margin_16dp"
-              android:background="@color/staples_white">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/image_square_size"
-        android:layout_height="@dimen/image_square_size"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_16dp"/>
-    <TextView
-        android:id="@+id/title"
-        style="@style/SmallProductTitle"
-        android:layout_marginRight="@dimen/margin_16dp"/>
-    <TextView
-        android:id="@+id/heavyweight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/fontsize_12sp"
-        android:paddingLeft="@dimen/left_margin"
-        android:paddingRight="@dimen/right_margin"
-        android:text="@string/heavyweight"
-        android:textColor="@color/staples_white"
-        android:background="@color/staples_green"/>
-    <TextView
-        android:id="@+id/addon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/fontsize_12sp"
-        android:paddingLeft="@dimen/left_margin"
-        android:paddingRight="@dimen/right_margin"
-        android:text="@string/addon"
-        android:textColor="@color/staples_white"
-        android:background="@color/staples_green"/>
-    <app.staples.mobile.cfa.widget.PriceSticker
-        android:id="@+id/pricing"
-        style="@style/SmallPriceSticker"
-        android:layout_marginTop="@dimen/elevation_high"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bundle_item"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/fixed_grid_tall_height"
+    android:background="@color/staples_white">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/rebate_note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/action_bar_quarter_margin"
-                android:textSize="@dimen/fontsize_10sp"
-                android:text="@string/rebate_text"
-                android:textColor="@color/staples_dark_gray"/>
-            <TextView
-                android:id="@+id/rebate_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/action_bar_quarter_margin"
-                android:paddingLeft="@dimen/left_margin"
-                android:paddingRight="@dimen/right_margin"
-                android:paddingBottom="@dimen/action_bar_quarter_margin"
-                android:textColor="@color/staples_white"
-                android:background="@drawable/rounded_corner_red"/>
-            <app.staples.mobile.cfa.widget.RatingStars
-                android:id="@+id/rating"
-                style="@style/SmallRatingStars"
-                android:layout_marginTop="@dimen/elevation_high"/>
-        </LinearLayout>
-        <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/margin_16dp">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="@dimen/image_square_size"
+            android:layout_height="@dimen/image_square_size"/>
+        <TextView
+            android:id="@+id/title"
+            style="@style/SmallProductTitle"
+            android:layout_marginTop="@dimen/margin_16dp"/>
+        <app.staples.mobile.cfa.widget.PriceSticker
+            android:id="@+id/pricing"
+            style="@style/SmallPriceSticker"
+            android:layout_marginTop="@dimen/elevation_high"/>
+        <app.staples.mobile.cfa.widget.RatingStars
+            android:id="@+id/rating"
+            style="@style/SmallRatingStars"
+            android:layout_marginTop="@dimen/elevation_high"/>
+        <app.staples.mobile.cfa.widget.IndicatorBlock
+            android:id="@+id/indicators"
+            style="@style/IndicatorBlock"
+            android:layout_marginTop="@dimen/elevation_high"/>
+        <TextView
+            android:id="@+id/rebate_note"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/bundle_action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:padding="@dimen/action_bar_half_margin"/>
-            <ProgressBar
-                android:id="@+id/bundle_whirlie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:padding="@dimen/action_bar_half_margin"
-                android:visibility="gone"/>
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/elevation_high"
+            android:textSize="@dimen/fontsize_10sp"
+            android:text="@string/rebate_text"
+            android:textColor="@color/staples_dark_gray"/>
     </LinearLayout>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/bundle_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:padding="@dimen/action_bar_half_margin"/>
+    <ProgressBar
+        android:id="@+id/bundle_whirlie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:padding="@dimen/action_bar_half_margin"
+        android:visibility="gone"/>
+</FrameLayout>
