--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -1,101 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_height="@dimen/fixed_grid_wide_height"
     android:background="@color/staples_white">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/image_square_size"
-        android:layout_height="@dimen/image_square_size"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"/>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/action_bar_half_margin"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title"
-            style="@style/SmallProductTitle"
-            android:layout_marginRight="@dimen/margin_16dp"/>
-        <TextView
-            android:id="@+id/heavyweight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_12sp"
-            android:paddingLeft="@dimen/left_margin"
-            android:paddingRight="@dimen/right_margin"
-            android:text="@string/heavyweight"
-            android:textColor="@color/staples_white"
-            android:background="@color/staples_green"/>
-        <TextView
-            android:id="@+id/addon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_12sp"
-            android:paddingLeft="@dimen/left_margin"
-            android:paddingRight="@dimen/right_margin"
-            android:text="@string/addon"
-            android:textColor="@color/staples_white"
-            android:background="@color/staples_green"/>
-        <app.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/pricing"
-            style="@style/SmallPriceSticker"
-            android:layout_marginTop="@dimen/elevation_high"/>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:padding="@dimen/margin_16dp">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="@dimen/image_square_size"
+            android:layout_height="@dimen/image_square_size"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/action_bar_half_margin"
-            android:layout_marginBottom="@dimen/action_bar_half_margin">
-            <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/action_bar_half_margin">
+            <TextView
+                android:id="@+id/title"
+                style="@style/SmallProductTitle"/>
+            <app.staples.mobile.cfa.widget.PriceSticker
+                android:id="@+id/pricing"
+                style="@style/SmallPriceSticker"
+                android:layout_marginTop="@dimen/elevation_high"/>
+            <app.staples.mobile.cfa.widget.RatingStars
+                android:id="@+id/rating"
+                style="@style/SmallRatingStars"
+                android:layout_marginTop="@dimen/elevation_high"/>
+            <app.staples.mobile.cfa.widget.IndicatorBlock
+                android:id="@+id/indicators"
+                style="@style/IndicatorBlock"
+                android:layout_marginTop="@dimen/elevation_high"/>
+            <TextView
+                android:id="@+id/rebate_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/rebate_note"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/action_bar_quarter_margin"
-                    android:textSize="@dimen/fontsize_10sp"
-                    android:text="@string/rebate_text"
-                    android:textColor="@color/staples_dark_gray"/>
-                <TextView
-                    android:id="@+id/rebate_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/action_bar_quarter_margin"
-                    android:paddingBottom="@dimen/action_bar_quarter_margin"
-                    android:paddingLeft="@dimen/left_margin"
-                    android:paddingRight="@dimen/right_margin"
-                    android:textSize="@dimen/fontsize_12sp"
-                    android:textColor="@color/staples_white"
-                    android:background="@drawable/rounded_corner_red"/>
-                <app.staples.mobile.cfa.widget.RatingStars
-                    android:id="@+id/rating"
-                    style="@style/SmallRatingStars"
-                    android:layout_marginTop="@dimen/elevation_high"/>
-            </LinearLayout>
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/progress_bar_width"
-                android:layout_gravity="bottom"
-                android:paddingRight="@dimen/margin_16dp">
-                <ImageView
-                    android:id="@+id/bundle_action"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"/>
-                <ProgressBar
-                    android:id="@+id/bundle_whirlie"
-                    android:layout_width="@dimen/progress_bar_width"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:visibility="gone"/>
-            </RelativeLayout>
+                android:layout_marginTop="@dimen/elevation_high"
+                android:textSize="@dimen/fontsize_10sp"
+                android:text="@string/rebate_text"
+                android:textColor="@color/staples_dark_gray"/>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/bundle_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:padding="@dimen/action_bar_half_margin"/>
+    <ProgressBar
+        android:id="@+id/bundle_whirlie"
+        android:layout_width="@dimen/progress_bar_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:padding="@dimen/action_bar_half_margin"
+        android:visibility="gone"/>
+</FrameLayout>
