--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -78,7 +78,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/staples_middle_gray">
+        android:background="@color/staples_middle_gray"
+        android:visibility="gone">
         <!--store hours-->
         <TextView
             style="@style/GraySubheading"
