--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -7,33 +7,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        android:background="@color/staples_red">
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/action_bar_half_margin"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/staples_white">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_search_black"/>
         <app.staples.mobile.cfa.widget.PlaceFieldView
             android:id="@+id/store_search"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="6dp"
-            android:background="@color/staples_white"
             android:inputType="textPostalAddress"
             android:imeOptions="actionSearch"
             android:singleLine="true"
             app:searchTypes="(regions)"
-            app:manualPrompt="@string/input_manually_allcaps"/>
+            app:manualPrompt="@string/input_manually_allcaps"
+            android:hint="@string/store_search_hint"
+            app:dualHint=""
+            android:dropDownWidth="match_parent"
+            android:dropDownHorizontalOffset="@dimen/search_negative_horizontal_offset" />
         <ImageView
-            android:id="@+id/goto_here"
+            android:id="@+id/view_mode"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingRight="6dp"
-            android:background="@color/staples_white"
-            android:src="@drawable/ic_my_location_black"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <LinearLayout
+        android:id="@+id/list_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="3dp"
+            android:background="@color/staples_dark_gray"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/staples_white"
+            android:visibility="gone"/>
+    </LinearLayout>
+    <!-- Single StoreItem gets inserted here -->
 </app.staples.mobile.cfa.widget.AnimatorLayout>
