--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,127 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="0dp">
-
-    <ImageView
-        android:id="@+id/cartitem_image"
-        android:layout_width="@dimen/image_square_size"
-        android:layout_height="@dimen/image_square_size"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_16dp"
-        android:layout_marginRight="12dp"/>
-    <RelativeLayout
-        android:id="@+id/cartitem_desc_layout"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_toRightOf="@id/cartitem_image"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true">
-        <TextView
-            android:id="@+id/cartitem_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="@dimen/margin_16dp"
-			android:layout_marginBottom="@dimen/verticalspacing_8dp"
-            android:lines="2"
-            android:ellipsize="end"
-            android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/staples_black"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"/>
-
-		<!-- Shipping Logic -->
-        <TextView
-            android:id="@+id/heavyweight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cartitem_title"
-            android:textSize="@dimen/fontsize_12sp"
-            android:paddingLeft="@dimen/left_margin"
-            android:paddingRight="@dimen/right_margin"
-            android:text="@string/heavyweight"
-            android:textColor="@color/staples_white"
-            android:background="@color/staples_green"/>
-        <TextView
-            android:id="@+id/addon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/heavyweight"
-            android:textSize="@dimen/fontsize_12sp"
-            android:paddingLeft="@dimen/left_margin"
-            android:paddingRight="@dimen/right_margin"
-            android:text="@string/addon"
-            android:textColor="@color/staples_white"
-            android:background="@color/staples_green"/>
-
-        <!--price-->
-		<app.staples.mobile.cfa.widget.PriceSticker
-			android:id="@+id/cartitem_price"
-			android:layout_below="@id/addon"
-			style="@style/SmallPriceSticker"
-			android:padding="0dp"/>
-
-        <TextView
-            android:id="@+id/rebate_note"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/action_bar_quarter_margin"
-            android:layout_below="@id/cartitem_price"
-            android:textSize="@dimen/fontsize_10sp"
-            android:text="@string/rebate_text"
-            android:textColor="@color/staples_dark_gray"
-            android:visibility="gone"/>
-        <TextView
-            android:id="@+id/rebate_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rebate_note"
-            android:paddingTop="@dimen/action_bar_quarter_margin"
-            android:paddingLeft="@dimen/left_margin"
-            android:paddingRight="@dimen/right_margin"
-            android:paddingBottom="@dimen/action_bar_quarter_margin"
-            android:textColor="@color/staples_white"
-            android:background="@drawable/rounded_corner_red"
-            android:visibility="gone"/>
-
+        android:orientation="horizontal">
         <ImageView
-            android:id="@+id/cartitem_delete"
-            android:layout_width="wrap_content"
+            android:id="@+id/cartitem_image"
+            android:layout_width="@dimen/image_square_size"
+            android:layout_height="@dimen/image_square_size"
+            android:layout_marginTop="@dimen/margin_16dp"
+            android:layout_marginBottom="@dimen/margin_16dp"
+            android:layout_marginRight="12dp"/>
+        <LinearLayout
+            android:id="@+id/cartitem_desc_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-			android:layout_below="@id/rebate_text"
-            android:layout_alignParentLeft="true"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/verticalspacing_8dp"
-            android:src="@drawable/ic_close_black"/>
-
-        <app.staples.mobile.cfa.widget.QuantityEditor
-            android:id="@+id/cartitem_qty"
-            style="@style/QtyEditorStyle"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-			android:layout_alignTop="@id/cartitem_delete"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/fontsize_14sp"
-            android:textColor="@color/staples_black"
-            app:maxQuantity="10"
-            app:popupWidth="120dp"/>
-    </RelativeLayout>
-
-    <!--horizontal rule-->
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/cartitem_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:lines="2"
+                android:ellipsize="end"
+                android:textSize="@dimen/fontsize_14sp"
+                android:textColor="@color/staples_black"/>
+            <app.staples.mobile.cfa.widget.PriceSticker
+                android:id="@+id/cartitem_price"
+                style="@style/SmallPriceSticker"
+                android:layout_marginTop="@dimen/margin_16dp"/>
+            <TextView
+                android:id="@+id/rebate_note"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:textSize="@dimen/fontsize_10sp"
+                android:text="@string/rebate_text"
+                android:textColor="@color/staples_dark_gray"
+                android:visibility="gone"/>
+            <app.staples.mobile.cfa.widget.IndicatorBlock
+                android:id="@+id/indicators"
+                style="@style/IndicatorBlock"
+                android:layout_marginTop="@dimen/margin_16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:gravity="right">
+                <ImageView
+                    android:id="@+id/cartitem_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_close_black"/>
+                <app.staples.mobile.cfa.widget.QuantityEditor
+                    android:id="@+id/cartitem_qty"
+                    style="@style/QtyEditorStyle"
+                    android:layout_width="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="@dimen/fontsize_14sp"
+                    app:maxQuantity="10"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
     <View
         android:id="@+id/cart_item_horizontal_rule"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/cartitem_desc_layout"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="@dimen/verticalspacing_8dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         android:background="@color/staples_horizontal_rule"
         android:visibility="gone"/>
-
-</RelativeLayout>
+</LinearLayout>
