--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
     <declare-styleable name="IndicatorBlock">
         <attr name="android:textSize"/>
         <attr name="android:textColor"/>
+        <attr name="android:textStyle"/>
         <attr name="cornerRadius" format="dimension"/>
         <attr name="spacingGap" format="dimension"/>
     </declare-styleable>
