--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -28,7 +28,7 @@
         <app.staples.mobile.cfa.widget.IndicatorBlock
             android:id="@+id/indicators"
             style="@style/IndicatorBlock"
-            android:layout_marginTop="@dimen/elevation_high"/>
+            android:layout_marginTop="@dimen/margin_16dp"/>
         <TextView
             android:id="@+id/rebate_note"
             android:layout_width="wrap_content"
