--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -33,7 +33,7 @@
             <app.staples.mobile.cfa.widget.IndicatorBlock
                 android:id="@+id/indicators"
                 style="@style/IndicatorBlock"
-                android:layout_marginTop="@dimen/elevation_high"/>
+                android:layout_marginTop="@dimen/margin_16dp"/>
             <TextView
                 android:id="@+id/rebate_note"
                 android:layout_width="wrap_content"
@@ -49,12 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:padding="@dimen/action_bar_half_margin"/>
+        android:padding="@dimen/margin_16dp"/>
     <ProgressBar
         android:id="@+id/bundle_whirlie"
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:padding="@dimen/action_bar_half_margin"
+        android:padding="@dimen/margin_16dp"
         android:visibility="gone"/>
 </FrameLayout>
