--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -180,13 +180,10 @@
     <style name="IndicatorBlock">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">5dp</item>
-        <item name="android:paddingRight">5dp</item>
-        <item name="android:paddingTop">3dp</item>
-        <item name="android:paddingBottom">3dp</item>
+        <item name="android:padding">4dp</item>
         <item name="cornerRadius">3dp</item>
         <item name="spacingGap">8dp</item>
-        <item name="android:textSize">@dimen/fontsize_12sp</item>
+        <item name="android:textSize">@dimen/fontsize_10sp</item>
         <item name="android:textColor">@color/staples_white</item>
     </style>
 
