--- a/app/src/main/res/layout/explain_dialog.xml
+++ b/app/src/main/res/layout/explain_dialog.xml
@@ -2,12 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frame"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/sku_image_width"
     android:layout_height="wrap_content"
     android:padding="12dp">
-    <TextView
+    <ImageView
         android:id="@+id/dismiss"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="X"/>
+        android:layout_gravity="right"
+        android:paddingRight="@dimen/action_bar_half_margin"
+        android:src="@drawable/ic_close_black"/>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingTop="@dimen/margin_16dp"
+        android:textColor="@color/staples_black"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textAllCaps="true"/>
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingTop="@dimen/margin_16dp"
+        android:paddingBottom="@dimen/margin_16dp"
+        android:textSize="@dimen/fontsize_12sp"
+        android:textColor="@color/staples_black"/>
 </LinearLayout>
