--- a/app/src/main/res/layout/explain_dialog.xml
+++ b/app/src/main/res/layout/explain_dialog.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/frame"
-    android:layout_width="@dimen/explain_dialog_width"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_16dp">
-    <ImageView
-        android:id="@+id/dismiss"
-        android:layout_width="wrap_content"
+    style="@style/AlertDialogStyle"
+    android:paddingTop="0dp">
+    <LinearLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_close_black"/>
+        android:orientation="vertical"/>
+    <TextView
+        android:id="@+id/dismiss"
+        style="@style/AlertDismissStyle"/>
 </LinearLayout>
