--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -8,7 +8,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:padding="@dimen/margin_16dp">
+        android:paddingLeft="@dimen/margin_16dp"
+        android:paddingRight="@dimen/margin_16dp"
+        android:paddingTop="@dimen/verticalspacing_16dp">
         <ImageView
             android:id="@+id/image"
             android:layout_width="@dimen/image_square_size"
@@ -32,7 +34,7 @@
         <app.staples.mobile.cfa.widget.RatingStars
             android:id="@+id/rating"
             style="@style/SmallRatingStars"
-            android:layout_marginTop="@dimen/verticalspacing_8dp"/>
+            android:layout_marginTop="@dimen/verticalspacing_4dp"/>
         <app.staples.mobile.cfa.widget.IndicatorBlock
             android:id="@+id/indicators"
             style="@style/IndicatorBlock"
