--- a/app/src/main/res/animator/right_pop_exit.xml
+++ b/app/src/main/res/animator/right_pop_exit.xml
@@ -6,5 +6,5 @@
         android:valueFrom="0"
         android:valueTo="1"
         android:interpolator="@android:anim/decelerate_interpolator"
-        android:duration="@android:integer/config_mediumAnimTime"/>
+        android:duration="@integer/fragmentTransitionTime"/>
 </set>
